--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.4.1",
+    "react-redux": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
