--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "body-parser": "^1.18.3",
     "concurrently": "^3.6.0",
     "express": "^4.16.3",
+    "firebase": "^5.7.2",
     "mongoose": "^5.4.1",
-    "react-redux": "^6.0.0"
+    "react-firebaseui": "^3.1.2",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
