--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.3.1",
     "reactstrap": "^6.1.0",
