--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "express": "^4.16.3",
     "firebase": "^5.7.2",
     "mongoose": "^5.4.1",
+    "react-bootstrap": "^0.32.4",
     "react-firebaseui": "^3.1.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.18.9"
   }
 }
